--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.0-rc.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "watch": "jest --watch *.js"
   },
   "scripts": {
     "start": "react-scripts start",
